# word-mcp-server

./: .gitignore  README.md  chroma.sqlite3  pyproject.toml
word_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
